<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_info"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_kwarentin"
            android:icon="@drawable/ic_info"
            android:title="@string/menu_kwarentin" />

    </group>



    <item android:title="@string/menu_callTitle">
        <menu>

            <item android:id="@+id/nav_call"
                android:icon="@drawable/ic_call_24"
                android:title="@string/menu_call"
                />
        </menu>
    </item>


    <item android:title="@string/menu_updateTitle">
        <menu>

            <item android:id="@+id/nav_update"
                android:icon="@drawable/ic_info"
                android:title="@string/menu_updatesubTitle"
                />

        </menu>
    </item>



</menu>