<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.dev_computing.covidintokpisin.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_kwarentin"
        android:name="com.dev_computing.covidintokpisin.ui.kwarentin.KwarentinFragment"
        android:label="@string/menu_kwarentin"
        tools:layout="@layout/fragment_kwarentin" />

    <fragment
        android:id="@+id/nav_call"
        android:name="com.dev_computing.covidintokpisin.ui.gallery.GalleryFragment"
        android:label="@string/menu_callTitle"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_update"
        android:name="com.dev_computing.covidintokpisin.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_updateTitle"
        tools:layout="@layout/fragment_slideshow" />


</navigation>